package com.subterranean_security.crimson.core.proto;

message MI_Report {

	required int64 init_date = 1;
	optional string hwid = 2;
	optional string cr_version = 3;
	optional string cr_build = 4;
	optional string jre_version = 5;
	optional string lib_version = 6;
	optional string instance = 7;
	optional string os_name = 8;
	optional string os_family = 9;
	optional string sys_arch = 10;
	optional string jre_arch = 11;
	optional string sys_uptime = 12;
	optional string jre_uptime = 13;
	optional string timezone = 14;
	optional string sys_lang = 15;
	optional string cr_lang = 16;
	optional string charset = 17;
	optional string cr_log = 18;
	optional string netty_log = 19;
	optional string comment = 20;

	optional string stack_trace = 21;
}